source/frontc/cparser.output
   0  $accept : %entry% $end

   1  interpret : file EOF

   2  file :
   3       | globals

   4  globals : global
   5          | globals global

   6  global : global_type global_defs SEMICOLON
   7         | global_type global_proto body
   8         | global_type old_proto old_pardefs body
   9         | global_type SEMICOLON
  10         | TYPEDEF typedef_type typedef_defs SEMICOLON
  11         | gcc_attribute TYPEDEF typedef_type typedef_defs SEMICOLON
  12         | TEMPLATE INF global_type global_defs SUP global

  13  global_type : global_mod_list_opt global_qual
  14              | global_mod_list_opt comp_type global_mod_list_opt
  15              | global_mod_list_opt NAMED_TYPE global_mod_list_opt
  16              | global_mod_list_opt

  17  global_mod_list_opt :
  18                      | global_mod_list

  19  global_mod_list : global_mod
  20                  | global_mod_list global_mod

  21  global_mod : STATIC
  22             | CONST
  23             | VOLATILE
  24             | EXTERN
  25             | GLOBAL
  26             | SHARED
  27             | gcc_attribute

  28  global_qual : qual_type
  29              | global_qual qual_type
  30              | global_qual global_mod

  31  global_defs : global_def
  32              | global_defs COMMA global_def

  33  global_def : global_dec opt_gcc_attributes
  34             | global_dec opt_gcc_attributes EQ init_expression

  35  global_dec : IDENT
  36             | LPAREN global_dec RPAREN
  37             | STAR global_dec
  38             | STAR CONST global_dec
  39             | STAR VOLATILE global_dec
  40             | STAR RESTRICT global_dec
  41             | STAR gcc_attributes global_dec
  42             | global_dec LBRACKET comma_expression RBRACKET
  43             | global_dec LBRACKET RBRACKET
  44             | global_dec LPAREN parameters RPAREN
  45             | LPAREN global_dec RPAREN LPAREN parameters RPAREN
  46             | global_dec LPAREN old_parameters RPAREN
  47             | LPAREN global_dec RPAREN LPAREN old_parameters RPAREN

  48  global_proto : global_dec opt_gcc_attributes

  49  old_proto : global_dec opt_gcc_attributes

  50  old_parameters : old_pardecs
  51                 | old_pardecs ELLIPSIS

  52  old_pardecs : IDENT
  53              | old_pardecs COMMA IDENT
  54              | old_pardecs COMMA NAMED_TYPE

  55  old_pardefs : old_pardef
  56              | old_pardefs old_pardef

  57  old_pardef : old_type old_defs SEMICOLON

  58  old_type : old_mods_opt NAMED_TYPE old_mods_opt
  59           | old_mods_opt comp_type old_mods_opt
  60           | old_mods_opt old_qual

  61  old_mods_opt :
  62               | CONST
  63               | REGISTER

  64  old_qual : qual_type
  65           | old_qual qual_type
  66           | old_qual CONST
  67           | old_qual REGISTER

  68  old_defs : old_def
  69           | old_defs COMMA old_def

  70  old_def : old_dec

  71  old_dec : IDENT
  72          | STAR old_dec
  73          | STAR CONST old_dec
  74          | STAR VOLATILE old_dec
  75          | old_dec LBRACKET comma_expression RBRACKET
  76          | old_dec LBRACKET RBRACKET
  77          | old_dec LPAREN parameters RPAREN
  78          | LPAREN old_dec RPAREN LPAREN parameters RPAREN
  79          | LPAREN old_dec RPAREN

  80  local : local_type local_defs SEMICOLON

  81  local_type : local_mod_list_opt local_qual
  82             | local_mod_list_opt comp_type local_mod_list_opt
  83             | local_mod_list_opt NAMED_TYPE local_mod_list_opt

  84  local_mod_list_opt :
  85                     | local_mod_list

  86  local_mod_list : local_mod
  87                 | local_mod_list local_mod

  88  local_mod : STATIC
  89            | AUTO
  90            | CONST
  91            | VOLATILE
  92            | REGISTER
  93            | EXTERN
  94            | SHARED
  95            | GLOBAL
  96            | gcc_attribute

  97  local_qual : qual_type
  98             | local_qual qual_type
  99             | local_qual local_mod

 100  local_defs : local_def
 101             | local_defs COMMA local_def

 102  local_def : local_dec opt_gcc_attributes
 103            | local_dec opt_gcc_attributes EQ init_expression

 104  local_dec : IDENT
 105            | NAMED_TYPE
 106            | STAR local_dec
 107            | STAR RESTRICT local_dec
 108            | STAR CONST local_dec
 109            | STAR VOLATILE local_dec
 110            | STAR gcc_attributes local_dec
 111            | local_dec LBRACKET comma_expression RBRACKET
 112            | local_dec LBRACKET RBRACKET
 113            | local_dec LPAREN parameters RPAREN
 114            | LPAREN local_dec RPAREN LPAREN parameters RPAREN
 115            | LPAREN local_dec RPAREN

 116  typedef_type : typedef_sub
 117               | CONST typedef_sub
 118               | VOLATILE typedef_sub

 119  typedef_sub : NAMED_TYPE
 120              | comp_type
 121              | typedef_qual
 122              | IDENT
 123              | NAMED_TYPE CONST
 124              | NAMED_TYPE VOLATILE
 125              | comp_type CONST
 126              | comp_type VOLATILE
 127              | IDENT CONST
 128              | IDENT VOLATILE

 129  typedef_qual : qual_type
 130               | typedef_qual qual_type
 131               | typedef_qual CONST
 132               | typedef_qual VOLATILE

 133  typedef_defs : typedef_def
 134               | typedef_defs COMMA typedef_def

 135  typedef_def : typedef_dec opt_gcc_attributes

 136  typedef_dec : IDENT
 137              | STAR typedef_dec
 138              | STAR RESTRICT typedef_dec
 139              | STAR CONST typedef_dec
 140              | STAR VOLATILE typedef_dec
 141              | STAR gcc_attributes typedef_dec
 142              | typedef_dec LBRACKET comma_expression RBRACKET
 143              | typedef_dec LBRACKET RBRACKET
 144              | typedef_dec LPAREN parameters RPAREN
 145              | LPAREN typedef_dec RPAREN LPAREN parameters RPAREN
 146              | LPAREN typedef_dec RPAREN

 147  field_list : field_list field
 148             | field

 149  field : field_type field_defs SEMICOLON

 150  field_type : field_mod_list_opt field_qual
 151             | field_mod_list_opt comp_type field_mod_list_opt
 152             | field_mod_list_opt NAMED_TYPE field_mod_list_opt

 153  field_mod_list_opt :
 154                     | field_mod_list

 155  field_mod_list : field_mod
 156                 | field_mod_list field_mod

 157  field_mod : CONST
 158            | VOLATILE
 159            | gcc_attribute

 160  field_qual : qual_type
 161             | field_qual qual_type
 162             | field_qual field_mod

 163  field_defs : field_defs COMMA field_def
 164             | field_def

 165  field_def : field_dec

 166  field_dec :
 167            | IDENT
 168            | NAMED_TYPE
 169            | STAR field_dec
 170            | STAR RESTRICT field_dec
 171            | STAR CONST field_dec
 172            | STAR VOLATILE field_dec
 173            | STAR gcc_attributes field_dec
 174            | field_dec LBRACKET comma_expression RBRACKET
 175            | field_dec LBRACKET RBRACKET
 176            | field_dec LPAREN parameters RPAREN
 177            | LPAREN field_dec RPAREN LPAREN parameters RPAREN
 178            | LPAREN field_dec RPAREN
 179            | IDENT COLON expression

 180  parameters :
 181             | param_list
 182             | param_list COMMA ELLIPSIS

 183  param_list : param_list COMMA param
 184             | param

 185  param : param_type param_def

 186  param_type : param_mods_opt NAMED_TYPE param_mods_opt
 187             | param_mods_opt comp_type param_mods_opt
 188             | param_mods_opt param_qual

 189  param_mods_opt :
 190                 | param_mods

 191  param_mods : param_mod
 192             | param_mods param_mod

 193  param_mod : CONST
 194            | REGISTER
 195            | VOLATILE
 196            | gcc_attribute

 197  param_qual : qual_type
 198             | param_qual qual_type
 199             | param_qual CONST
 200             | param_qual REGISTER
 201             | param_qual VOLATILE
 202             | param_qual gcc_attribute

 203  param_def : param_dec

 204  param_dec :
 205            | IDENT
 206            | NAMED_TYPE
 207            | STAR param_dec
 208            | STAR RESTRICT param_dec
 209            | STAR CONST param_dec
 210            | STAR VOLATILE param_dec
 211            | STAR gcc_attributes param_dec
 212            | param_dec LBRACKET comma_expression RBRACKET
 213            | param_dec LBRACKET RBRACKET
 214            | LPAREN param_dec RPAREN LPAREN parameters RPAREN
 215            | LPAREN param_dec RPAREN

 216  only_type : only_type_type only_def

 217  only_type_type : only_mod_list_opt only_qual
 218                 | only_mod_list_opt comp_type only_mod_list_opt
 219                 | only_mod_list_opt NAMED_TYPE only_mod_list_opt

 220  only_mod_list_opt :
 221                    | only_mod_list

 222  only_qual : qual_type
 223            | only_qual qual_type
 224            | only_qual only_mod

 225  only_mod_list : only_mod
 226                | only_mod_list only_mod

 227  only_mod : CONST
 228           | VOLATILE
 229           | gcc_attribute

 230  only_def : only_dec

 231  only_dec :
 232           | STAR only_dec
 233           | STAR RESTRICT only_dec
 234           | STAR CONST only_dec
 235           | STAR VOLATILE only_dec
 236           | STAR gcc_attributes only_dec
 237           | only_dec LBRACKET comma_expression RBRACKET
 238           | only_dec LBRACKET RBRACKET
 239           | LPAREN only_dec RPAREN LPAREN parameters RPAREN
 240           | LPAREN only_dec RPAREN

 241  qual_type : VOID
 242            | CHAR
 243            | INT
 244            | FLOAT
 245            | DOUBLE
 246            | LONG
 247            | SHORT
 248            | SIGNED
 249            | UNSIGNED

 250  comp_type : STRUCT type_name
 251            | STRUCT LBRACE field_list RBRACE
 252            | STRUCT type_name LBRACE field_list RBRACE
 253            | UNION type_name
 254            | UNION LBRACE field_list RBRACE
 255            | UNION type_name LBRACE field_list RBRACE
 256            | ENUM type_name
 257            | ENUM LBRACE enum_list RBRACE
 258            | ENUM type_name LBRACE enum_list RBRACE

 259  type_name : IDENT
 260            | NAMED_TYPE

 261  enum_list : enum_name
 262            | enum_list COMMA enum_name

 263  enum_name : IDENT
 264            | IDENT EQ expression

 265  init_expression : LBRACE init_comma_expression RBRACE
 266                  | expression

 267  init_comma_expression : init_expression
 268                        | init_comma_expression COMMA init_expression
 269                        | init_comma_expression COMMA

 270  opt_expression :
 271                 | comma_expression

 272  comma_expression : expression
 273                   | comma_expression COMMA expression

 274  expression : constant
 275             | IDENT
 276             | SIZEOF expression
 277             | SIZEOF LPAREN only_type RPAREN
 278             | PLUS expression
 279             | MINUS expression
 280             | STAR expression
 281             | AND expression
 282             | EXCLAM expression
 283             | TILDE expression
 284             | PLUS_PLUS expression
 285             | expression PLUS_PLUS
 286             | MINUS_MINUS expression
 287             | expression MINUS_MINUS
 288             | expression ARROW IDENT
 289             | expression ARROW NAMED_TYPE
 290             | expression DOT IDENT
 291             | expression DOT NAMED_TYPE
 292             | LPAREN body RPAREN
 293             | LPAREN comma_expression RPAREN
 294             | LPAREN only_type RPAREN expression
 295             | expression LPAREN opt_expression RPAREN
 296             | expression LBRACKET comma_expression RBRACKET
 297             | expression QUEST expression COLON expression
 298             | expression PLUS expression
 299             | expression MINUS expression
 300             | expression STAR expression
 301             | expression SLASH expression
 302             | expression PERCENT expression
 303             | expression AND_AND expression
 304             | expression PIPE_PIPE expression
 305             | expression AND expression
 306             | expression PIPE expression
 307             | expression CIRC expression
 308             | expression EQ_EQ expression
 309             | expression EXCLAM_EQ expression
 310             | expression INF expression
 311             | expression SUP expression
 312             | expression INF_EQ expression
 313             | expression SUP_EQ expression
 314             | expression INF_INF expression
 315             | expression SUP_SUP expression
 316             | expression EQ expression
 317             | expression PLUS_EQ expression
 318             | expression MINUS_EQ expression
 319             | expression STAR_EQ expression
 320             | expression SLASH_EQ expression
 321             | expression PERCENT_EQ expression
 322             | expression AND_EQ expression
 323             | expression PIPE_EQ expression
 324             | expression CIRC_EQ expression
 325             | expression INF_INF_EQ expression
 326             | expression SUP_SUP_EQ expression

 327  constant : CST_INT
 328           | CST_FLOAT
 329           | CST_CHAR
 330           | string_list

 331  string_list : CST_STRING
 332              | string_list CST_STRING

 333  body_begin : LBRACE

 334  body_middle : opt_stats

 335  body : body_begin body_middle RBRACE

 336  opt_locals :
 337             | locals

 338  locals : local
 339         | locals local

 340  twolocals : local local

 341  opt_stats :
 342            | stats

 343  stats : statement
 344        | stats statement

 345  statement : local
 346            | SEMICOLON
 347            | comma_expression SEMICOLON
 348            | body
 349            | IF LPAREN comma_expression RPAREN statement
 350            | IF LPAREN comma_expression RPAREN statement ELSE statement
 351            | SWITCH LPAREN comma_expression RPAREN statement
 352            | WHILE LPAREN comma_expression RPAREN statement
 353            | DO statement WHILE LPAREN comma_expression RPAREN SEMICOLON
 354            | FOR LPAREN local_type local_defs SEMICOLON opt_expression SEMICOLON opt_expression RPAREN statement
 355            | FOR LPAREN opt_expression SEMICOLON opt_expression SEMICOLON opt_expression RPAREN statement
 356            | IDENT COLON statement
 357            | CASE expression COLON statement
 358            | DEFAULT COLON statement
 359            | RETURN SEMICOLON
 360            | RETURN expression SEMICOLON
 361            | BREAK SEMICOLON
 362            | CONTINUE SEMICOLON
 363            | GOTO IDENT SEMICOLON
 364            | ASM LPAREN CST_STRING RPAREN SEMICOLON
 365            | ASM LPAREN CST_STRING gnu_asm_io gnu_asm_io opt_gnu_asm_mods RPAREN SEMICOLON

 366  gnu_asm_io : COLON gnu_asm_args

 367  gnu_asm_args : gnu_asm_arg
 368               | gnu_asm_args COMMA gnu_asm_arg

 369  gnu_asm_arg : CST_STRING LPAREN expression RPAREN
 370              | LBRACKET IDENT RBRACKET CST_STRING LPAREN expression RPAREN

 371  opt_gnu_asm_mods :
 372                   | COLON gnu_asm_mods

 373  gnu_asm_mods : CST_STRING
 374               | gnu_asm_mods COMMA CST_STRING

 375  opt_gcc_attributes :
 376                     | gcc_attributes

 377  gcc_attributes : gcc_attribute
 378                 | gcc_attributes gcc_attribute

 379  gcc_attribute : ATTRIBUTE LPAREN LPAREN opt_gnu_args RPAREN RPAREN
 380                | EXTENSION
 381                | INLINE

 382  opt_gnu_args :
 383               | gnu_args

 384  gnu_args : gnu_arg
 385           | gnu_args COMMA gnu_arg

 386  gnu_arg : gnu_id
 387          | constant
 388          | gnu_id LPAREN opt_gnu_args RPAREN

 389  gnu_id : IDENT
 390         | GNU_ATTRS

 391  %entry% : '\001' interpret
 392          | '\002' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . interpret  (391)
	file : .  (2)
	global_mod_list_opt : .  (17)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	TEMPLATE  shift 9
	GLOBAL  shift 10
	SHARED  shift 11
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	EOF  reduce 2
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17
	SEMICOLON  reduce 17

	interpret  goto 15
	file  goto 16
	globals  goto 17
	global  goto 18
	global_type  goto 19
	global_mod_list_opt  goto 20
	global_mod_list  goto 21
	global_mod  goto 22
	gcc_attribute  goto 23


state 2
	%entry% : '\002' . file  (392)
	file : .  (2)
	global_mod_list_opt : .  (17)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	TEMPLATE  shift 9
	GLOBAL  shift 10
	SHARED  shift 11
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	$end  reduce 2
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17
	SEMICOLON  reduce 17

	file  goto 24
	globals  goto 17
	global  goto 18
	global_type  goto 19
	global_mod_list_opt  goto 20
	global_mod_list  goto 21
	global_mod  goto 22
	gcc_attribute  goto 23


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	global : TYPEDEF . typedef_type typedef_defs SEMICOLON  (10)

	IDENT  shift 25
	NAMED_TYPE  shift 26
	CHAR  shift 27
	INT  shift 28
	DOUBLE  shift 29
	FLOAT  shift 30
	VOID  shift 31
	ENUM  shift 32
	STRUCT  shift 33
	UNION  shift 34
	SIGNED  shift 35
	UNSIGNED  shift 36
	LONG  shift 37
	SHORT  shift 38
	VOLATILE  shift 39
	CONST  shift 40
	.  error

	typedef_type  goto 41
	comp_type  goto 42
	qual_type  goto 43
	typedef_sub  goto 44
	typedef_qual  goto 45


state 5
	global_mod : VOLATILE .  (23)

	.  reduce 23


state 6
	global_mod : EXTERN .  (24)

	.  reduce 24


state 7
	global_mod : STATIC .  (21)

	.  reduce 21


state 8
	global_mod : CONST .  (22)

	.  reduce 22


state 9
	global : TEMPLATE . INF global_type global_defs SUP global  (12)

	INF  shift 46
	.  error


state 10
	global_mod : GLOBAL .  (25)

	.  reduce 25


state 11
	global_mod : SHARED .  (26)

	.  reduce 26


state 12
	gcc_attribute : ATTRIBUTE . LPAREN LPAREN opt_gnu_args RPAREN RPAREN  (379)

	LPAREN  shift 47
	.  error


state 13
	gcc_attribute : EXTENSION .  (380)

	.  reduce 380


state 14
	gcc_attribute : INLINE .  (381)

	.  reduce 381


state 15
	%entry% : '\001' interpret .  (391)

	.  reduce 391


state 16
	interpret : file . EOF  (1)

	EOF  shift 48
	.  error


state 17
	file : globals .  (3)
	globals : globals . global  (5)
	global_mod_list_opt : .  (17)

	TYPEDEF  shift 4
	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	TEMPLATE  shift 9
	GLOBAL  shift 10
	SHARED  shift 11
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	$end  reduce 3
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	EOF  reduce 3
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17
	SEMICOLON  reduce 17

	global  goto 49
	global_type  goto 19
	global_mod_list_opt  goto 20
	global_mod_list  goto 21
	global_mod  goto 22
	gcc_attribute  goto 23


state 18
	globals : global .  (4)

	.  reduce 4


state 19
	global : global_type . global_defs SEMICOLON  (6)
	global : global_type . global_proto body  (7)
	global : global_type . old_proto old_pardefs body  (8)
	global : global_type . SEMICOLON  (9)

	IDENT  shift 50
	STAR  shift 51
	LPAREN  shift 52
	SEMICOLON  shift 53
	.  error

	global_defs  goto 54
	global_def  goto 55
	global_dec  goto 56
	global_proto  goto 57
	old_proto  goto 58


state 20
	global_type : global_mod_list_opt . global_qual  (13)
	global_type : global_mod_list_opt . comp_type global_mod_list_opt  (14)
	global_type : global_mod_list_opt . NAMED_TYPE global_mod_list_opt  (15)
	global_type : global_mod_list_opt .  (16)

	NAMED_TYPE  shift 59
	CHAR  shift 27
	INT  shift 28
	DOUBLE  shift 29
	FLOAT  shift 30
	VOID  shift 31
	ENUM  shift 32
	STRUCT  shift 33
	UNION  shift 34
	SIGNED  shift 35
	UNSIGNED  shift 36
	LONG  shift 37
	SHORT  shift 38
	IDENT  reduce 16
	STAR  reduce 16
	LPAREN  reduce 16
	SEMICOLON  reduce 16

	global_qual  goto 60
	comp_type  goto 61
	qual_type  goto 62


state 21
	global_mod_list_opt : global_mod_list .  (18)
	global_mod_list : global_mod_list . global_mod  (20)

	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	GLOBAL  shift 10
	SHARED  shift 11
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	IDENT  reduce 18
	NAMED_TYPE  reduce 18
	CHAR  reduce 18
	INT  reduce 18
	DOUBLE  reduce 18
	FLOAT  reduce 18
	VOID  reduce 18
	ENUM  reduce 18
	STRUCT  reduce 18
	UNION  reduce 18
	SIGNED  reduce 18
	UNSIGNED  reduce 18
	LONG  reduce 18
	SHORT  reduce 18
	STAR  reduce 18
	LPAREN  reduce 18
	SEMICOLON  reduce 18

	global_mod  goto 63
	gcc_attribute  goto 64


state 22
	global_mod_list : global_mod .  (19)

	.  reduce 19


state 23
	global : gcc_attribute . TYPEDEF typedef_type typedef_defs SEMICOLON  (11)
	global_mod : gcc_attribute .  (27)

	TYPEDEF  shift 65
	IDENT  reduce 27
	NAMED_TYPE  reduce 27
	CHAR  reduce 27
	INT  reduce 27
	DOUBLE  reduce 27
	FLOAT  reduce 27
	VOID  reduce 27
	ENUM  reduce 27
	STRUCT  reduce 27
	UNION  reduce 27
	SIGNED  reduce 27
	UNSIGNED  reduce 27
	LONG  reduce 27
	SHORT  reduce 27
	VOLATILE  reduce 27
	EXTERN  reduce 27
	STATIC  reduce 27
	CONST  reduce 27
	GLOBAL  reduce 27
	SHARED  reduce 27
	STAR  reduce 27
	LPAREN  reduce 27
	SEMICOLON  reduce 27
	ATTRIBUTE  reduce 27
	EXTENSION  reduce 27
	INLINE  reduce 27


state 24
	%entry% : '\002' file .  (392)

	.  reduce 392


state 25
	typedef_sub : IDENT .  (122)
	typedef_sub : IDENT . CONST  (127)
	typedef_sub : IDENT . VOLATILE  (128)

	VOLATILE  shift 66
	CONST  shift 67
	IDENT  reduce 122
	STAR  reduce 122
	LPAREN  reduce 122


state 26
	typedef_sub : NAMED_TYPE .  (119)
	typedef_sub : NAMED_TYPE . CONST  (123)
	typedef_sub : NAMED_TYPE . VOLATILE  (124)

	VOLATILE  shift 68
	CONST  shift 69
	IDENT  reduce 119
	STAR  reduce 119
	LPAREN  reduce 119


state 27
	qual_type : CHAR .  (242)

	.  reduce 242


state 28
	qual_type : INT .  (243)

	.  reduce 243


state 29
	qual_type : DOUBLE .  (245)

	.  reduce 245


state 30
	qual_type : FLOAT .  (244)

	.  reduce 244


state 31
	qual_type : VOID .  (241)

	.  reduce 241


state 32
	comp_type : ENUM . type_name  (256)
	comp_type : ENUM . LBRACE enum_list RBRACE  (257)
	comp_type : ENUM . type_name LBRACE enum_list RBRACE  (258)

	IDENT  shift 70
	NAMED_TYPE  shift 71
	LBRACE  shift 72
	.  error

	type_name  goto 73


state 33
	comp_type : STRUCT . type_name  (250)
	comp_type : STRUCT . LBRACE field_list RBRACE  (251)
	comp_type : STRUCT . type_name LBRACE field_list RBRACE  (252)

	IDENT  shift 70
	NAMED_TYPE  shift 71
	LBRACE  shift 74
	.  error

	type_name  goto 75


state 34
	comp_type : UNION . type_name  (253)
	comp_type : UNION . LBRACE field_list RBRACE  (254)
	comp_type : UNION . type_name LBRACE field_list RBRACE  (255)

	IDENT  shift 70
	NAMED_TYPE  shift 71
	LBRACE  shift 76
	.  error

	type_name  goto 77


state 35
	qual_type : SIGNED .  (248)

	.  reduce 248


state 36
	qual_type : UNSIGNED .  (249)

	.  reduce 249


state 37
	qual_type : LONG .  (246)

	.  reduce 246


state 38
	qual_type : SHORT .  (247)

	.  reduce 247


state 39
	typedef_type : VOLATILE . typedef_sub  (118)

	IDENT  shift 25
	NAMED_TYPE  shift 26
	CHAR  shift 27
	INT  shift 28
	DOUBLE  shift 29
	FLOAT  shift 30
	VOID  shift 31
	ENUM  shift 32
	STRUCT  shift 33
	UNION  shift 34
	SIGNED  shift 35
	UNSIGNED  shift 36
	LONG  shift 37
	SHORT  shift 38
	.  error

	comp_type  goto 42
	qual_type  goto 43
	typedef_sub  goto 78
	typedef_qual  goto 45


state 40
	typedef_type : CONST . typedef_sub  (117)

	IDENT  shift 25
	NAMED_TYPE  shift 26
	CHAR  shift 27
	INT  shift 28
	DOUBLE  shift 29
	FLOAT  shift 30
	VOID  shift 31
	ENUM  shift 32
	STRUCT  shift 33
	UNION  shift 34
	SIGNED  shift 35
	UNSIGNED  shift 36
	LONG  shift 37
	SHORT  shift 38
	.  error

	comp_type  goto 42
	qual_type  goto 43
	typedef_sub  goto 79
	typedef_qual  goto 45


state 41
	global : TYPEDEF typedef_type . typedef_defs SEMICOLON  (10)

	IDENT  shift 80
	STAR  shift 81
	LPAREN  shift 82
	.  error

	typedef_defs  goto 83
	typedef_def  goto 84
	typedef_dec  goto 85


state 42
	typedef_sub : comp_type .  (120)
	typedef_sub : comp_type . CONST  (125)
	typedef_sub : comp_type . VOLATILE  (126)

	VOLATILE  shift 86
	CONST  shift 87
	IDENT  reduce 120
	STAR  reduce 120
	LPAREN  reduce 120


state 43
	typedef_qual : qual_type .  (129)

	.  reduce 129


state 44
	typedef_type : typedef_sub .  (116)

	.  reduce 116


state 45
	typedef_sub : typedef_qual .  (121)
	typedef_qual : typedef_qual . qual_type  (130)
	typedef_qual : typedef_qual . CONST  (131)
	typedef_qual : typedef_qual . VOLATILE  (132)

	CHAR  shift 27
	INT  shift 28
	DOUBLE  shift 29
	FLOAT  shift 30
	VOID  shift 31
	SIGNED  shift 35
	UNSIGNED  shift 36
	LONG  shift 37
	SHORT  shift 38
	VOLATILE  shift 88
	CONST  shift 89
	IDENT  reduce 121
	STAR  reduce 121
	LPAREN  reduce 121

	qual_type  goto 90


state 46
	global : TEMPLATE INF . global_type global_defs SUP global  (12)
	global_mod_list_opt : .  (17)

	VOLATILE  shift 5
	EXTERN  shift 6
	STATIC  shift 7
	CONST  shift 8
	GLOBAL  shift 10
	SHARED  shift 11
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	IDENT  reduce 17
	NAMED_TYPE  reduce 17
	CHAR  reduce 17
	INT  reduce 17
	DOUBLE  reduce 17
	FLOAT  reduce 17
	VOID  reduce 17
	ENUM  reduce 17
	STRUCT  reduce 17
	UNION  reduce 17
	SIGNED  reduce 17
	UNSIGNED  reduce 17
	LONG  reduce 17
	SHORT  reduce 17
	STAR  reduce 17
	LPAREN  reduce 17

	global_type  goto 91
	global_mod_list_opt  goto 20
	global_mod_list  goto 21
	global_mod  goto 22
	gcc_attribute  goto 64


state 47
	gcc_attribute : ATTRIBUTE LPAREN . LPAREN opt_gnu_args RPAREN RPAREN  (379)

	LPAREN  shift 92
	.  error


state 48
	interpret : file EOF .  (1)

	.  reduce 1


state 49
	globals : globals global .  (5)

	.  reduce 5


state 50
	global_dec : IDENT .  (35)

	.  reduce 35


state 51
	global_dec : STAR . global_dec  (37)
	global_dec : STAR . CONST global_dec  (38)
	global_dec : STAR . VOLATILE global_dec  (39)
	global_dec : STAR . RESTRICT global_dec  (40)
	global_dec : STAR . gcc_attributes global_dec  (41)

	IDENT  shift 50
	VOLATILE  shift 93
	CONST  shift 94
	RESTRICT  shift 95
	STAR  shift 51
	LPAREN  shift 52
	ATTRIBUTE  shift 12
	EXTENSION  shift 13
	INLINE  shift 14
	.  error

	global_dec  goto 96
	gcc_attributes  goto 97
	gcc_attribute  goto 98


state 52
	global_dec : LPAREN . global_dec RPAREN  (36)
	global_dec : LPAREN . global_dec RPAREN LPAREN parameters RPAREN  (45)
	global_dec : LPAREN . global_dec RPAREN LPAREN old_parameters RPAREN  (47)

	IDENT  shift 50
	STAR  shift 51
	LPAREN  shift 52
	.  error

	global_dec  goto 99


state 53
	global : global_type SEMICOLON .  (9)

	.  reduce 9


state 54
	global : global_type global_defs . SEMICOLON  (6)
	global_defs : global_defs . COMMA global_def  (32)

	SEMICOLON  shift 100
	COMMA  shift 101
	.  error


state 55
	global_defs : global_def .  (31)

	.  reduce 31

